[gd_scene load_steps=2 format=3 uid="uid://b8qvk4u7h3xvl"]

[ext_resource type="Script" path="res://scripts/ui/evolution_menu.gd" id="1"]

[node name="EvolutionMenu" type="PanelContainer"]
custom_minimum_size = Vector2(400, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MainVBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "CHOOSE EVOLUTION"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MainVBox/Header"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="Separator1" type="HSeparator" parent="MainVBox"]
layout_mode = 2

[node name="CurrentInfo" type="Label" parent="MainVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Agumon | DP: 0 | Origin: In-Training"
horizontal_alignment = 1

[node name="Separator2" type="HSeparator" parent="MainVBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainVBox"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="EvolutionOptions" type="VBoxContainer" parent="MainVBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Separator3" type="HSeparator" parent="MainVBox"]
layout_mode = 2

[node name="Footer" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="MainVBox/Footer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Cost: 100 DB"

[node name="CancelBtn" type="Button" parent="MainVBox/Footer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Cancel"
